# rbujo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release-desktop.yml
docs/: api.md  frontend.md  migration.md  operations.md  testing.md  windows-release.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/bujo/: Bus.md  CalendarPage.md  EntryItem.md  Timeline.md  UiBus.md  UseNav.md  UserModal.md  file-structure.md  子弹笔记总框架.md
frontend/bujo/api/: entryservice.md  upload.md
frontend/bujo/markdown/: ImagePreview.md  MarkdownView.md
frontend/scripts/: release.mjs  releaseUtils.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DraggableEntryCard.tsx  ImagePreview.tsx  MarkdownViewer.tsx
frontend/src/config/: colors.ts  entryTheme.ts  translations.ts
frontend/src/hooks/: useAppTheme.ts  (+7 more)
frontend/tests/: archiveSections.test.ts  attachmentService.test.ts  backupAttachments.test.ts  desktopBugfixContracts.test.ts  entryStatusPolicy.test.ts  futureLogClassification.test.ts  releaseScript.test.ts  releaseWorkflow.test.ts  tauriCapabilities.test.ts  tauriReleaseConfig.test.ts  uiEvents.test.ts  updateCheckErrors.test.ts  updatePromptPolicy.test.ts  updateReleaseNotes.test.ts  updateService.test.ts
src/: auth.rs  config.rs  db.rs  error.rs  legacy_migration.rs  lib.rs  local.rs  main.rs  models.rs  routes.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: frontend_contracts.rs  local_backend.rs
(+83 files in other folders)
