[package]
name = "rbullet-journal"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
form_urlencoded = "1.2.2"
hmac = "0.12.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mime_guess = "2.0.5"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs", "net", "signal"] }
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
zip = { version = "7.2.0", default-features = false }
