[package]
name = "rbujo-desktop"
version = "0.1.0"
description = "Local desktop bullet journal"
edition = "2024"

[lib]
name = "rbujo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
rbullet-journal = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-single-instance = "2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
